--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=8081
+
+# Datasource config
+spring.datasource.url=jdbc:mysql://localhost:3306/device?useUnicode=yes&characterEncoding=UTF-8&characterSetResults=UTF-8
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-message=always
+server.error.include-binding-errors=always
