--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/device?useUnicode=yes&characte
 spring.datasource.username=root
 spring.datasource.password=password
 
+#Change from update to create-drop
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
