--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
     runtimeOnly 'mysql:mysql-connector-java'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
 
 }
 
